add_subdirectory(customwidgets)
add_subdirectory(dialogs)
add_subdirectory(overlays)
add_subdirectory(panels)
add_subdirectory(viewers)
file(GLOB SOURCES *.cpp)
list (REMOVE_ITEM SOURCES moc_*.cpp)
list (REMOVE_ITEM SOURCES *_automoc.cpp)
add_library(gui STATIC ${SOURCES})

target_link_libraries(gui Qt5::Widgets customwidgets dialogs overlays panels viewers)

if(WITH_KDE_BLUR)
    target_link_libraries(gui KF5::WindowSystem)
endif()
