if(WITH_MPV)
    file(GLOB SOURCES *.cpp playermpv/*.cpp)
    list (REMOVE_ITEM SOURCES moc_*.cpp)
    list (REMOVE_ITEM SOURCES *_automoc.cpp)
    add_library(viewers STATIC ${SOURCES})
    target_link_libraries(viewers Qt5::Widgets mpv)
    add_definitions(-DUSE_MPV)
else()
    file(GLOB SOURCES *.cpp playerdummy/*.cpp)
    list (REMOVE_ITEM SOURCES *_automoc.cpp)
    add_library(viewers STATIC ${SOURCES})
    target_link_libraries(viewers Qt5::Widgets)
endif()
